--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     Comidas del fin <br> del mundo
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Prepárate para descubrir platos tan deliciosos que harán que quieras disfrutarlos una y otra vez. Cada bocado de nuestras comidas del fin del mundo es una explosión de sabores únicos, donde lo clásico se mezcla con lo inesperado. Desde carnes jugosas y tiernas hasta salsas intensamente cremosas, cada detalle ha sido cuidadosamente pensado para llevar tus papilas gustativas al límite.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
