--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Soy un apasionado de la cocina, siempre en busca de crear platos que sorprendan y deleiten. Mi enfoque combina creatividad, sabores auténticos y técnicas precisas para lograr comidas que no solo alimenten, sino que cuenten una historia en cada bocado
         </p>
 
 
