--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    La fotografía de comida me permite capturar la belleza de cada plato, resaltando texturas, colores y detalles que cuentan una historia. A través de mi lente, comparto la pasión por el arte culinario visualmente.
                 </p>
             </div>
             <div class="col-12 col-md-4">
