--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
                 <i class="far fa-map fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Me apasiona hacer blogs de viajes, compartiendo mis experiencias mientras exploro nuevas culturas y sabores. A través de mis relatos, busco inspirar a otros a descubrir el mundo con curiosidad y emoción.
                 </p>
             </div>
         </div>
